Cleanup and filling out more of the rest API.